# s4-landmark-ir

./: .gitignore  pyproject.toml
notebooks/: benchmark.ipynb  eval.ipynb  eval_viz.ipynb  hf-llm.ipynb  mask_filter.ipynb  maskformer.ipynb
src/: constant.py  eval_clip.py  eval_s4.py  index_clip.py  index_s4.py  ingest.py  main.py  make_dataset.py  metrics.py  utils.py
src/datasets/: mp16.py
src/geoclip/: GeoCLIP.py  image_encoder.py
src/pipeline/: feature_extractor.py
