[project]
name = "s4-landmark-ir"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.5.0",
    "ftfy>=6.3.1",
    "loralib>=0.1.2",
    "polars>=1.38.0",
    "qdrant-client>=1.16.2",
    "scipy>=1.17.0",
    "setuptools>=80.10.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
